Fix accessability contrast issue on footer, blue rgb lighter

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -335,7 +335,7 @@ footer h6 span {
     text-align: center;
     min-width: 250px;
     max-width: 250px;
-    color: rgb(80, 80, 250);
+    color: rgb(168, 168, 250);
 }
 
 .footer-section p {
